[gd_scene load_steps=14 format=3 uid="uid://6um757n2lpg0"]

[ext_resource type="PackedScene" uid="uid://bytdvjfsp4ena" path="res://references.tscn" id="1_id63u"]
[ext_resource type="Script" uid="uid://bwcpbrc7w7pjr" path="res://Scripts/nu_bank.gd" id="1_wwiqp"]
[ext_resource type="PackedScene" uid="uid://shuyqn7utcag" path="res://Nodes/exit_button.tscn" id="2_wwiqp"]
[ext_resource type="Texture2D" uid="uid://cuuvlvmhp7a7m" path="res://Assets/Images/Transfer.png" id="4_66w3h"]
[ext_resource type="FontFile" uid="uid://dbpsb87t3lhm0" path="res://Assets/Fonts/Nu/Graphik-Medium-Trial.otf" id="4_u4rts"]
[ext_resource type="FontFile" uid="uid://cbj3xsqxg0iso" path="res://Assets/Fonts/Nu/Graphik-Regular-Trial.otf" id="5_u4rts"]
[ext_resource type="Texture2D" uid="uid://dn1es7000suly" path="res://Assets/Images/Comprobante.png" id="7_ixp2e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ixp2e"]
bg_color = Color(0.13333334, 0.13333334, 0.13333334, 1)
corner_radius_top_left = 256
corner_radius_top_right = 256
corner_radius_bottom_right = 256
corner_radius_bottom_left = 256

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_66w3h"]

[sub_resource type="LabelSettings" id="LabelSettings_ixp2e"]
font = ExtResource("4_u4rts")
font_size = 58
font_color = Color(0.88235295, 0.88235295, 0.88235295, 1)

[sub_resource type="LabelSettings" id="LabelSettings_25pj7"]
font = ExtResource("4_u4rts")
font_size = 56
font_color = Color(0.88235295, 0.88235295, 0.88235295, 1)
outline_size = 3
outline_color = Color(0.88235295, 0.88235295, 0.88235295, 1)
stacked_outline_count = 1
stacked_outline_0/color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_iip8v"]
font = ExtResource("5_u4rts")
font_size = 30
font_color = Color(0.88235295, 0.88235295, 0.88235295, 1)

[sub_resource type="LabelSettings" id="LabelSettings_66w3h"]
font = ExtResource("4_u4rts")
font_size = 25

[node name="nu_bank" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wwiqp")

[node name="References" parent="." instance=ExtResource("1_id63u")]
visible = false

[node name="ReferencesNuP2" parent="References/ReferencesNuP1" index="0"]
visible = false

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Exit" parent="." instance=ExtResource("2_wwiqp")]
modulate = Color(0.88235295, 0.88235295, 0.88235295, 1)
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_right = 0.0
offset_left = 45.0
offset_top = 84.0
offset_right = 53.0
offset_bottom = 92.0
grow_horizontal = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 167.0
offset_right = 140.0
offset_bottom = 272.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ixp2e")

[node name="Transfer" type="Sprite2D" parent="Panel"]
position = Vector2(53, 53)
scale = Vector2(0.115, 0.115)
texture = ExtResource("4_66w3h")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 305.0
offset_bottom = 340.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_66w3h")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
clip_contents = true
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_right = 32

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="user_name" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Ramses Mercado Pago"
label_settings = SubResource("LabelSettings_ixp2e")
autowrap_mode = 2

[node name="money_label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "$5.00"
label_settings = SubResource("LabelSettings_25pj7")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 11

[node name="time_label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Jueves, 18 sep 2025 02:41:02 pm"
label_settings = SubResource("LabelSettings_iip8v")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 192

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 203
theme_override_constants/margin_top = 63
theme_override_constants/margin_right = 205
theme_override_constants/margin_bottom = -165

[node name="Panel" type="Panel" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ixp2e")

[node name="Comprobante" type="Sprite2D" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/Panel"]
position = Vector2(53, 53)
scale = Vector2(0.115, 0.115)
texture = ExtResource("7_ixp2e")

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Abrir comprobante"
label_settings = SubResource("LabelSettings_66w3h")
horizontal_alignment = 1

[editable path="References"]
